Set banner width and fix home banner on firefox

--- a/src/sass/elements/_banner.scss
+++ b/src/sass/elements/_banner.scss
@@ -87,7 +87,7 @@
    
 
             @media(min-width: 768px){
-                background-size: 35%;
+                background-size: 35vw;
                 background-position: center 25%;
                 background-attachment: fixed;
                 }
@@ -109,6 +109,11 @@
         h1::before{
             background-position: center 50%;
             opacity: 0.7;
+
+            @supports(filter: opacity(0.7)){
+                opacity: 1;
+                filter: opacity(0.7);
+            }
         }
 
         .banner-content{
